--- a/website/client/css/tasks.styl
+++ b/website/client/css/tasks.styl
@@ -516,7 +516,7 @@ form
   outline: 0
   line-height: 2em
   border-radius: 4px
-  display: flex
+  display: inline-flex
   align-items: center // vertically align text
 
 .task-options
